# JliveF

./: Cargo.toml  README.md  agents.rar  build.rs  internaldumper.rc
.cargo/: config.toml
agents/: CMakeLists.txt  README.md
agents/src/: agent.cpp
external_dumper/: Cargo.toml  external_classes_12408_20260414-193700.txt  external_classes_12408_20260414-194445.txt
external_dumper/sa_helper/: ExternalSaDump.java
external_dumper/src/: main.rs
screenshare_toolkit/Screenshare Tool/: README.md  Screenshare Tool.sln  Screenshare Tool.vcxproj  Screenshare Tool.vcxproj.filters  main.cpp  main.hpp
screenshare_toolkit/Screenshare Tool/checks/: README.md
screenshare_toolkit/Screenshare Tool/checks/bam/: bam.cpp  bam.hpp
screenshare_toolkit/Screenshare Tool/checks/devices/: devices.cpp  devices.hpp  keys.c  keys.h  mouse.cpp  mouse.hpp
screenshare_toolkit/Screenshare Tool/checks/disk/: disk.cpp  disk.hpp
screenshare_toolkit/Screenshare Tool/checks/eventlog/: evthandler.cpp  evthandler.hpp  evtquery.cpp  evtquery.hpp
screenshare_toolkit/Screenshare Tool/checks/import code/: importcode.cpp  importcode.hpp
screenshare_toolkit/Screenshare Tool/checks/macros/: macros.c  macros.h  macroscanner.cpp  macroscanner.hpp
screenshare_toolkit/Screenshare Tool/checks/memory/: javaw.c  javaw.h  kernelproc.cpp  kernelproc.hpp  userproc.cpp  userproc.hpp
screenshare_toolkit/Screenshare Tool/checks/mods/: mods.c  mods.h
screenshare_toolkit/Screenshare Tool/checks/onboard memory macros/: keyboardhook.c  keyboardhook.h  mousehook.c  mousehook.h
screenshare_toolkit/Screenshare Tool/checks/system/: localhost.c  localhost.h  prochacker.cpp  prochacker.hpp  prochandler.cpp  prochandler.hpp
screenshare_toolkit/Screenshare Tool/checks/task scheduler/: scheduler.cpp  scheduler.hpp
screenshare_toolkit/Screenshare Tool/checks/usn journal/: fsutil.cpp  fsutil.hpp  journal.cpp  journal.hpp
screenshare_toolkit/Screenshare Tool/checks/virtual machines/: vmaware.hpp
screenshare_toolkit/Screenshare Tool/miscellaneous/: README.md
screenshare_toolkit/Screenshare Tool/miscellaneous/digital signature/: trustverify.cpp  trustverify.hpp
screenshare_toolkit/Screenshare Tool/miscellaneous/gui/: color.c  color.h
screenshare_toolkit/Screenshare Tool/miscellaneous/wmi/: wmi.cpp  wmi.hpp
screenshare_toolkit/rust_project/: Cargo.toml  README.md  build.rs
screenshare_toolkit/rust_project/docs/: parity_matrix.md  project_analysis.md  rust_migration.md  security_review.md  testing.md
screenshare_toolkit/rust_project/native/: signature_bridge.cpp  vm_bridge.cpp
screenshare_toolkit/rust_project/src/: lib.rs  main.rs
screenshare_toolkit/rust_project/src/app/: mod.rs
screenshare_toolkit/rust_project/src/core/: console.rs  memory.rs  mod.rs  native.rs  parsers.rs  paths.rs  report.rs  shell.rs  signatures.rs  text.rs  time.rs  usn.rs  yara_rules.rs
screenshare_toolkit/rust_project/src/modules/: mod.rs
screenshare_toolkit/rust_project/src/modules/environment/: admin.rs  devices.rs  disks.rs  eventlog.rs  mod.rs  network.rs  services.rs  system_informer.rs  vm.rs
screenshare_toolkit/rust_project/src/modules/forensics/: bam.rs  journal.rs  mod.rs  scheduler.rs
screenshare_toolkit/rust_project/src/modules/processes/: csrss.rs  executed_files.rs  import_code.rs  java_scan.rs  macro_files.rs  macro_strings.rs  memory_tool.rs  mod.rs  mods.rs
screenshare_toolkit/rust_project/src/ui/: menu.rs  mod.rs  render.rs
screenshare_toolkit/rust_project/tests/: parser_tests.rs
screenshare_toolkit/rust_project/yara/: README.md
src/: dump_report.rs  external_dumper.rs  internal_dumper.rs  jvmti_detector.rs  main.rs  script_finder.rs  winliveinfo.rs
src/bypass_scan/: activity.rs  context.rs  engine.rs  i18n.rs  keywords.rs  logger.rs  mod.rs  report.rs  types.rs  utils.rs
src/bypass_scan/detectors/: bypass01_hosts.rs  bypass02_restricted_sites.rs  bypass03_disallowrun.rs  bypass04_fake_signature.rs  bypass05_service_threads.rs  bypass06_timestomp.rs  bypass07_app_blockers.rs  bypass08_legacy_console.rs  bypass09_prefetch_rename.rs  bypass10_stego.rs  bypass11_hidden_cmd_text.rs  bypass12_extension_spoof.rs  bypass13_prefetch_attrib.rs  bypass14_eventlog_clear.rs  bypass15_usn_clear.rs  bypass16_file_wiping.rs  bypass17_registry_usb_deletion.rs  bypass18_prefetch_amcache_wipe.rs  bypass19_browser_cache_wipe.rs  bypass20_shadowcopy_delete.rs  bypass21_pagefile_hiber_wipe.rs  bypass22_thumbnail_cache_delete.rs  bypass24_covert_channels.rs  bypass25_ram_disk.rs  bypass26_log_flooding.rs  bypass27_usb_policy_disable.rs  bypass28_wef_tamper.rs  bypass29_restore_point_removal.rs  bypass30_trim_tamper.rs  bypass31_polyglot_append.rs  bypass32_fileless_amsi_lolbins.rs  bypass33_container_prune.rs  bypass34_cloud_sync_delete.rs  bypass35_exif_timestamp_edit.rs  bypass37_fake_usb_artifacts.rs  bypass38_mac_randomization.rs  bypass39_dns_fuzzing.rs  bypass40_secure_boot_tamper.rs  mod.rs
src/external_dumper_New/: hotspot.rs  mod.rs  win32.rs
src/found_faker/: admin.rs  mod.rs  models.rs  report.rs  scanner.rs  viewer.rs
src/netscan/: mod.rs  netsh.rs  registry.rs  report.rs  rules.rs
src/proxy_bypass_found/: collection.rs  config.rs  helpers.rs  mod.rs  models.rs  packet_capture.rs  packet_detections.rs  parsers.rs  pktmon.rs  process_memory.rs
